<resources>
    <string name="app_name">恢復日記</string>
    <string name="action_settings">設定與資訊</string>
    <string name="action_add_event">新增</string>
    <string name="action_remind">提醒</string>
    <string name="action_save">儲存</string>
    <string name="action_cancel">取消</string>
    <string name="action_delete">刪除</string>
    <string name="action_edit">修改</string>
    <string name="coping_skill">應對技巧</string>
    <string name="default_goal_good"> 機車</string>
    <string name="default_recreation_1">聽音樂</string>
    <string name="default_recreation_2">慢跑</string>
    <string name="default_recreation_3">打球</string>
    <string name="self_help_counter_unit">點</string>
    <string name="TAG_PAGE_YEAR">tag_page_year</string>
    <string name="TAG_PAGE_MONTH">tag_page_month</string>
    <string name="TAG_CAL_CELL_DAY">tag_cal_cell_day</string>
    <string name="TAG_CAL_CELL_MONTH">tag_cal_cell_month</string>
    <string name="TAG_CAL_CELL_PAGE_MONTH">tag_cal_cell_page_month</string>
    <string name="TAG_CAL_CELL_YEAR">tag_cal_cell_year</string>
    <string name="TAG_CAL_CELL_TS">tag_cal_cell_ts</string>
    <string name="TAG_CAL_CELL_NOTEADD">tag_cal_cell_noteadd</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="morning_time">0&#8211;12</string>
    <string name="noon">下午</string>
    <string name="noon_time">12&#8211;20</string>
    <string name="night_time">20&#8211;24</string>
    <string name="dollor_sign">$</string>
    <string name="high">高</string>
    <string name="low">低</string>
    <string name="done">完成</string>
    <string name="today_test">今日測試</string>
    <string name="today_test_none">尚未測試</string>
    <string name="week_test">每周測試統計</string>
    <string name="month_test">每月統計測試</string>
    <string name="test_pass">通\u00A0\u00A0\u00A0\u00A0過</string>
    <string name="test_fail">不通過</string>
    <string name="test_none">未測試</string>
    <string name="result">檢測結果</string>
    <string name="negative_consequence">負面後果</string>
    <string name="positive_goal">正向目標</string>
    <string name="analysis_rank_month_help">整體排名：</string>
    <string name="analysis_rank_week_help">本周排名：</string>
    <string name="call_check_help">確定要撥給 </string>
    <string name="question_sign">？</string>
    <string name="title_activity_dev">DevActivity</string>
    <string-array name="spinner_array">
        <item>@string/tab_test</item>
        <item>@string/tab_statistics</item>
        <item>@string/tab_event</item>
        <item>@string/tab_ranking</item>
    </string-array>
    <string-array name="analysis_rank_change_help">
        <item>第一名</item>
        <item>第二名</item>
        <item>第三名</item>
        <item></item>
        <item>進步了</item>
        <item>後退了</item>
    </string-array>
    <string name="point">點</string>
    <string name="testPass">做得很好！</string>
    <string name="testFail">好好加油！</string>
    <string name="doneQuestionnaire">繼續加油！</string>
    <string name="salivaResult">檢測結果</string>
    <string name="salivaResultNegative">檢測結果為\n「通過」</string>
    <string name="salivaResultPositive">檢測結果為\n「不通過」</string>
    <string name="tab_test">口水檢測</string>
    <string name="tab_statistics">我的狀態</string>
    <string name="tab_event">事件記錄</string>
    <string name="tab_ranking">危險排行</string>
    <string name="remote_service_started">remote_service_started</string>
    <string name="remote_service_connected">remote_service_connected</string>
    <string-array name="toolbar_spinner_array">
        <item>@string/tab_test</item>
        <item>@string/tab_statistics</item>
        <item>@string/tab_event</item>
        <item>@string/tab_ranking</item>
    </string-array>
    <string name="test_null"></string>
    <string name="test_second"> 秒</string>
    <string name="test_start">開始</string>
    <string name="test_confirm">確認</string>
    <string name="test_instruction_down1">請按上方「開始」\n進行口水檢測</string>
    <string name="test_instruction_down2">與檢測器連線成功!</string>
    <string name="test_instruction_down3">吐完足量口水於管中後\n請抽出口水匣後方擋片</string>
    <string name="test_instruction_down4">正在確認口水量</string>
    <string name="test_instruction_down5_left">請在 </string>
    <string name="test_instruction_down5_right"> 秒內再吐一口口水</string>
    <string name="test_instruction_down6_left">「事件紀錄」頁面將在\n</string>
    <string name="test_instruction_down6_right"> 秒內啟動</string>
    <string name="test_instruction_top1">請於開啟藍芽功能頁面按「允許」來開啟藍牙</string>
    <string name="test_instruction_top2">檢測器連線中，請稍等</string>
    <string name="test_instruction_top3">無法連接檢測器，請確認檢測器己開啟並重試</string>
    <string name="test_instruction_top4">試紙夾未插入! \n請插入試紙匣\n直到紅燈亮起並重試</string>
    <string name="test_instruction_top5">請積蓄口水準備檢測</string>
    <string name="test_instruction_top6">請將臉對準中央\n並吐口水於管中</string>
    <string name="test_instruction_top7">偵測不到足夠的口水量，請重新開始檢測</string>
    <string name="test_instruction_top8">檢測進行中，請稍等</string>
    <string name="test_instruction_top9">口水量不足</string>
    <string name="test_instruction_top10">己完成收集檢測所需之口水</string>
    <string name="test_instruction_top11">裝置電量不足!\n請先將裝置充電</string>
    <string name="test_instruction_top12">無法與裝置連線\n請重試</string>
    <string name="test_instruction_top13">己超過可檢測次數\n一日可檢測兩次</string>
    <string name="test_instruction_top14">試紙夾己使用過\n請換新試紙夾</string>
    <string name="test_notification_countdown">檢測完成倒數</string>
    <string name="test_result_is_out">檢測分析己完成，請開啟程式查看</string>
    <string name="toolbar_test_result_is_out">檢測分析己完成</string>
    <string name="event_list_click_continue_fill">繼續填寫</string>
    <string name="create_event_name">新增活動</string>
    <string name="create_event_progress">填寫進度</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="night">晚上</string>
    <string name="midnight">半夜</string>
    <string name="time">時間</string>
    <string name="event_time">活動時間</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="before_yesterday">前天</string>
    <string name="morning">早上</string>
    <string name="afternoon">下午</string>
    <string name="previous_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="complete">完成</string>
    <string name="scenario_type">情境類型</string>
    <string name="self_state">自我狀態</string>
    <string name="social_interaction">社交互動</string>
    <string name="slackness">鬆懈</string>
    <string name="body">身體</string>
    <string name="control">控制</string>
    <string name="impulse">衝動</string>
    <string name="emotion">情緒</string>
    <string name="get_along">相處</string>
    <string name="social">社交</string>
    <string name="entertain">同樂</string>
    <string name="all_scenario">全部情境</string>
    <string name="step2_question_left">「</string>
    <string name="step2_question_right">」的類型之中\n哪個情境會讓你想用K?</string>
    <string name="step2_all_scenario_question">以下哪個情境會讓你想用K?</string>
    <string name="event_content_name">詳細事件</string>
    <string name="event_incomplete_name">待修正記事</string>
    <string name="ranking_content_name">應對策略</string>
    <string name="ranking_frequency">事件次數</string>
    <string name="ranking_test_fail">檢測未通過</string>
    <string name="reflection_progress">反思進度</string>
    <string-array name="spinner_day">
        <item>@string/today</item>
        <item>@string/yesterday</item>
        <item>@string/before_yesterday</item>
    </string-array>
    <string-array name="spinner_time_period">
        <item>@string/morning</item>
        <item>@string/afternoon</item>
        <item>@string/night</item>
        <item>@string/midnight</item>
    </string-array>
    <string-array name="spinner_step2">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="relapse_probability">使用機率</string>
    <string name="step3_question">這個事件會讓你想要使用K的機率?</string>
    <string name="very_small">很小</string>
    <string name="small">小</string>
    <string name="medium">中</string>
    <string name="large">大</string>
    <string name="very_large">很大</string>
    <string name="original_behavior">原始行為</string>
    <string name="original_behavior_colon">原始行為：</string>
    <string name="step4_question_left">當「</string>
    <string name="step4_question_right">」的時候，我作了什麼?</string>
    <string name="frequent_input_step4">常用行為</string>
    <string name="original_emotion">原始情緒</string>
    <string name="original_emotion_colon">原始情緒：</string>
    <string name="step5_question_left">「</string>
    <string name="step5_question_right">」的時候，當時的情緒是?</string>
    <string name="empty_step4_toast">請先填寫「原始行為」</string>
    <string name="empty_step5_toast">請先填寫「原始情緒」</string>
    <string name="empty_step6_toast">請先填寫「原始想法」</string>
    <string name="empty_step7_toast">請先填寫「期待行為」</string>
    <string name="empty_step8_toast">請先填寫「期待情緒」</string>
    <string-array name="then_emotions">
        <item>生氣</item>
        <item>難過</item>
        <item>緊張</item>
        <item>厭惡</item>
        <item>開心</item>
        <item>驚恐</item>
        <item>無聊</item>
        <item>渴望</item>
    </string-array>
    <string name="original_thought">原始想法</string>
    <string name="original_thought_colon">原始想法：</string>
    <string name="step6_question_left">當「</string>
    <string name="step6_question_mid">」時，是什麼原因讓我感到「</string>
    <string name="step6_question_right">」?</string>
    <string name="frequent_input_step6">常用想法</string>
    <string name="if_scenario_again_left">假如再次發生「</string>
    <string name="if_scenario_again_right">」</string>
    <string name="expected_behavior">期待行為</string>
    <string name="expected_behavior_colon">期待行為：</string>
    <string name="step7_question">我應該怎麼做比較好?</string>
    <string name="expected_emotion">期待情緒</string>
    <string name="expected_emotion_colon">期待情緒：</string>
    <string name="step8_question_left">我應該有什麼樣的情緒來讓我「</string>
    <string name="step8_question_right">」</string>
    <string-array name="expected_emotions">
        <item>冷靜</item>
        <item>堅定</item>
        <item>放鬆</item>
        <item>活力十足</item>
        <item>開心</item>
        <item>感覺被愛</item>
    </string-array>
    <string name="need_revise">待修正</string>
    <string name="edit_event">編輯事件</string>
    <string name="expected_thought">期待想法</string>
    <string name="expected_thought_colon">期待想法：</string>
    <string name="step9_question_left">什麼樣的想法可以讓我感覺「</string>
    <string name="step9_question_right">」?</string>
    <string name="frequent_input_step9">常用想法</string>
    <string name="confirm_cancel_click">確定要離開本頁面?</string>
    <string name="create_event_saved">新增的活動己儲存</string>
    <string name="warning_empty_step2">請選擇情境類別</string>
    <string name="warning_empty_step3">請選擇使用機率</string>
    <string name="warning_empty_step4">請填入原始行為</string>
    <string name="warning_empty_step5">請選擇原始情緒</string>
    <string name="warning_empty_step6">請填入原始想法</string>
    <string name="warning_empty_step7">請填入期待行為</string>
    <string name="warning_empty_step8">請選擇期待情緒</string>
    <string name="warning_empty_step9">請填入期待想法</string>
    <string name="coping_tips_title">戒K小常識</string>
    <string name="previous_tip">上一則</string>
    <string name="next_tip">下一則</string>
    <string name="confirm_delete_event_click">確定要刪除這個事件?\n*刪除後</string>
    <string name="help_name">相關設定與資訊</string>
    <string name="about_name">關於</string>
    <string name="developer_name">後台輸入密碼</string>
    <string name="pre_setting_name">後台設定</string>
    <string name="tutorial_name">使用方法</string>
    <string name="help_page">相關設定與資訊</string>
    <string name="about_title">關於</string>
    <string name="about_help">詳細資料:</string>
    <string name="about_setting">設定：</string>
    <string name="about_time_gap">提醒時間間隔為：</string>
    <string name="scenario">事件情境</string>
</resources>