<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="1dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/relapse_probability"/>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/step3_question"
            android:id="@+id/step3_question"/>


    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupStep3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:paddingTop="15dp"
        android:paddingBottom="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/very_small"
            android:textColor="@color/color6Gray"
            android:id="@+id/radioButton1"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center"
            android:layout_weight="1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small"
            android:textColor="@color/color6Gray"
            android:id="@+id/radioButton2"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center"
            android:layout_weight="1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textColor="@color/color6Gray"
            android:id="@+id/radioButton3"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center"
            android:layout_weight="1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large"
            android:textColor="@color/color6Gray"
            android:id="@+id/radioButton4"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center"
            android:layout_weight="1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/very_large"
            android:textColor="@color/color6Gray"
            android:id="@+id/radioButton5"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center"
            android:layout_weight="1"/>
    </RadioGroup>


</LinearLayout>