<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="1dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:background="@color/colorAGray"
        android:textColor="@color/colorWhite"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/scenario_type"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/self_state"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="1dp"
        >

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="@dimen/create_even_scenario_height"
            android:layout_weight="1"
            android:background="@drawable/create_event_step2_selector_icon1"
            android:id="@+id/scenario_button1" />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="@dimen/create_even_scenario_height"
            android:layout_weight="1"
            android:background="@drawable/create_event_step2_selector_icon2"
            android:id="@+id/scenario_button2" />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="@dimen/create_even_scenario_height"
            android:layout_weight="1"
            android:background="@drawable/create_event_step2_selector_icon3"
            android:id="@+id/scenario_button3" />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="@dimen/create_even_scenario_height"
            android:layout_weight="1"
            android:background="@drawable/create_event_step2_selector_icon4"
            android:id="@+id/scenario_button4" />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="@dimen/create_even_scenario_height"
            android:layout_weight="1"
            android:background="@drawable/type_icon5"
            android:id="@+id/scenario_button5" />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/slackness"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/body"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/control"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/impulse"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/emotion"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="15dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/social_interaction"/>





    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="1dp"
        >

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="@dimen/create_even_scenario_height"
            android:layout_weight="1"
            android:background="@drawable/type_icon6"
            android:id="@+id/scenario_button6" />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="@dimen/create_even_scenario_height"
            android:layout_weight="1"
            android:background="@drawable/type_icon7"
            android:id="@+id/scenario_button7" />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="@dimen/create_even_scenario_height"
            android:layout_weight="1"
            android:background="@drawable/type_icon8"
            android:id="@+id/scenario_button8" />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="@dimen/create_even_scenario_height"
            android:layout_weight="1"
            android:visibility="invisible"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="@dimen/create_even_scenario_height"
            android:layout_weight="1"
            android:visibility="invisible"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/get_along"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/social"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/entertain"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="@dimen/create_even_scenario_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_step2_question"
        android:visibility="gone"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview_step2_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <LinearLayout
            android:id="@+id/layout_scenario_step2"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_scenario_step2"
                android:editable="false"
                android:layout_weight="0.95" />


            <ImageButton
                android:layout_width="@dimen/voice_input_width"
                android:layout_height="@dimen/voice_input_height"
                android:visibility="gone"
                android:alpha="0.6"
                android:background="@drawable/ic_arrow_drop_down_black_48dp"
                android:id="@+id/scenario_step2"
                android:layout_weight="0.05"/>


        </LinearLayout>


    </LinearLayout>



</LinearLayout>